feat: Upgrade pre-commit hooks

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,5 @@
+default_install_hook_types: [pre-commit, commit-msg]
+
 repos:
 
 - repo: https://github.com/pre-commit/pre-commit-hooks
@@ -20,3 +22,12 @@ repos:
   rev: 'v0.0.259'
   hooks:
     - id: ruff
+
+- repo: local
+  hooks:
+    - id: validate-commit-msg
+      name: validate-commit-msg
+      language: pygrep
+      entry: ^(feat|fix|docs|style|refactor|perf|test|build|ci|chore|revert)(!?)(:)\s{1}([\w,\W,:]+)
+      stages: [commit-msg]
+      args: [--multiline, --negate]
