--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,13 +48,13 @@ readme = "README.md"
 packages = [{ include = "feature_engineering_polars" }]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.7"
 polars = "^0.16.14"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.0.259"
 black = "^23.1.0"
-pre-commit = "^3.2.0"
+pre-commit = { version = "^3.2.0", python = "^3.8" }
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.2.2"
