ci: Trigger unit testing only on PR

--- a/.github/workflows/unit-test.yaml
+++ b/.github/workflows/unit-test.yaml
@@ -1,5 +1,13 @@
-name: Unit Tests
-on: push
+name: Unit tests
+on:
+  pull_request:
+    branches:
+      - dev
+      - main
+  workflow_dispatch:
+    branches:
+      - dev
+      - main
 
 jobs:
   ci:
