--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,6 +28,6 @@ repos:
     - id: validate-commit-msg
       name: validate-commit-msg
       language: pygrep
-      entry: ^(feat|fix|docs|style|refactor|perf|test|build|ci|chore|revert)(!?)(:)\s{1}([\w,\W,:]+)
+      entry: ^(feat|fix|docs|style|refactor|perf|test|build|ci|chore|revert)(!?)(:)\s{1}[A-Z][\w,\W,:]*$
       stages: [commit-msg]
       args: [--multiline, --negate]
