--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ polars = "^0.16.14"
 ruff = "^0.0.259"
 black = "^23.1.0"
 pre-commit = { version = "^3.2.0", python = "^3.8" }
+mypy = "^1.1.1"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.2.2"
