--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,11 +2,6 @@ default_install_hook_types: [pre-commit, commit-msg]
 
 repos:
 
-- repo: https://github.com/charliermarsh/ruff-pre-commit
-  rev: 'v0.0.259'
-  hooks:
-    - id: ruff
-
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v4.4.0
   hooks:
@@ -15,12 +10,23 @@ repos:
   - id: check-yaml
   - id: check-added-large-files
 
+- repo: https://github.com/charliermarsh/ruff-pre-commit
+  rev: 'v0.0.259'
+  hooks:
+    - id: ruff
+
 - repo: https://github.com/psf/black
   rev: 23.1.0
   hooks:
   - id: black
     args: [--config, pyproject.toml]
     files: \.py$
+
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    rev: 'v1.1.1'
+    hooks:
+    -   id: mypy
+        args: [--no-strict-optional, --ignore-missing-imports]
 
 - repo: local
   hooks:
