ci: Add coverage

--- a/.github/workflows/unit-test.yaml
+++ b/.github/workflows/unit-test.yaml
@@ -7,9 +7,6 @@ on:
       - dev
       - main
   workflow_dispatch:
-    branches:
-      - dev
-      - main
 
 jobs:
   ci:
@@ -32,4 +29,8 @@ jobs:
       - name: Install packages
         run: poetry install
       - name: Run pytest
-        run: poetry run pytest
+        run: poetry run pytest --cov --cov-report=xml
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
