--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,7 @@ mypy = "^1.1.1"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.2.2"
+pytest-cov = "^4.0.0"
 
 [build-system]
 requires = ["poetry-core"]
